# libhtsp

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
client/: client.cpp
src/: HTSMessage.cpp  HTSMessage.h  HTSPConnection.cpp  HTSPConnection.h
